feat: updating docs and environment variables
