# packages/server/src/routes/users.routes.ts
@@ -5,32 +5,39 @@ import { usersMiddlewares, validationsMiddlewares } from '../middlewares/index';
 
 const router = express.Router()
 
-router.get('/list', (_: Request, __: Response, next: NextFunction) =>{
-  /*
-    #swagger.tags = ['Users']
-    #swagger.sumary = 'Listagem de usuários'
-    #swagger.description = 'Através dessa rota é possível listar todos os usuários da aplicação.'
-    #swagger.schema = { $ref: '#/schemas/UsersListSchema' }
-  */ 
-  next()
-}, usersControllers.getAllUsers);
-
 router.post('/create',  (_: Request, __: Response, next: NextFunction) =>{
-  /*
+  /* SWAGGER DOCS
+  
     #swagger.tags = ['Users']
     #swagger.sumary = 'Criação de usuário'
     #swagger.description = 'Através dessa rota é possível criar um usuário.'
-    #swagger.schema = { #ref: #/schemas/UserSchema}
+    #swagger.schema = { '#ref: #/schemas/UserSchema' }
     #swagger.requestBody = {
             required: true,
             content: {
                 "application/json": {
                     schema: {
-                        $ref: "#/components/schemas/UserCreationSchema"
+                        $ref: '#/components/schemas/UserCreationSchema'
                     }  
                 }
             }
         }
+    #swagger.responses[201] = {
+        description: 'Crição feita com sucesso.',
+        schema: { $ref: '#/components/schemas/UserCreationResponse' }
+    }
+    #swagger.responses[400] = {
+        description: 'Erro de validação.',
+        schema: { $ref: '#/components/schemas/SchemaValidationError' }
+    }
+    #swagger.responses[409] = {
+        description: 'Erro por conflitos.',
+        schema: { $ref: '#/components/schemas/ConflictError' }
+    }
+    #swagger.responses[500] = {
+        description: 'Erro interno.',
+        schema: { $ref: '#/components/schemas/InternalServerError' }
+    }
   */ 
   next()
 }, 
@@ -38,5 +45,24 @@ router.post('/create',  (_: Request, __: Response, next: NextFunction) =>{
   usersMiddlewares.verifyIfUserAlreadyExists,
   usersControllers.createUser
 );
+
+router.get('/list', (_: Request, __: Response, next: NextFunction) =>{
+  /* SWAGGER DOCS
+
+    #swagger.tags = ['Users']
+    #swagger.sumary = 'Listagem de usuários'
+    #swagger.description = 'Através dessa rota é possível listar todos os usuários da aplicação.'
+    #swagger.schema = { $ref: '#/schemas/UsersListSchema' }
+    #swagger.responses[200] = {
+        description: 'Retorno feito com sucesso.',
+        schema: { $ref: '#/components/schemas/UserListResponse' }
+    }
+    #swagger.responses[500] = {
+        description: 'Erro interno.',
+        schema: { $ref: '#/components/schemas/InternalServerError' }
+    }
+  */ 
+  next()
+}, usersControllers.getAllUsers);
 
 export default router;
